manifests/jenkins/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/add-base-url: "true"
  name: jenkins-ingress
  namespace: jenkins
spec:    
   rules:
   - host: example.com
     http:
       paths:      
       - path: /jenkins
         pathType: Prefix
         backend:
            service:
              name: jenkins-svc
              port:
                number: 80
